# excel-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  TOOLS.md  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml
src/excel_mcp/: __main__.py  calculations.py  cell_utils.py  chart.py  data.py  exceptions.py  formatting.py  pivot.py  server.py  sheet.py  validation.py  workbook.py
